fix(grid): no more nowrap on columns

--- a/src/styles/vars/_columns.scss
+++ b/src/styles/vars/_columns.scss
@@ -25,7 +25,7 @@
     flex-shrink: 1;
     display: block;
     flex-basis: 0;
-    white-space: nowrap;
+    white-space: normal;
     width: 100%;
     margin: .5rem;
     padding: .5rem 1rem;
